--- a/action.yml
+++ b/action.yml
@@ -3,7 +3,7 @@ author: "GNRTRREX"
 description: "Generates a feed for a podcast from a YAML file"
 runs:
   using: "docker"
-  image: "dockerfile"
+  image: "Dockerfile"
 branding:
   icon: "git-branch"
   color: "green"
