--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: "Podcast Generator"
-author: "GNRTRREX"
+author: "hrithikxd"
 description: "Generates a feed for a podcast from a YAML file"
 runs:
   using: "docker"
